--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <button class="btnsearch">Search</button>
         </div>
         <button class="addbookadminbtn btnsearch hide">Add book</button>
+        <button class="logoutbtnmainpage">Add book</button>
       </div>
       <h2>Library Management</h2>
       <div class="content">
